--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ olympus = "1.3.0"
 rlib = "3.5.0"
 placeholders = "2.6.1+1.21.5"
 repo = "1.2.0"
+meowdding-lib = "1.0.1"
 # Dev Dependencies
 devauth = "1.2.1"
 modmenu = "12.0.0-beta.1"
@@ -34,6 +35,7 @@ olympus = { module = "earth.terrarium.olympus:olympus-fabric-1.21.5", version.re
 rlib = { module = "com.teamresourceful.resourcefullib:resourcefullib-fabric-1.21.5", version.ref = "rlib" }
 placeholders = { module = "eu.pb4:placeholder-api", version.ref = "placeholders" }
 repo = { module = "tech.thatgravyboat.repo-lib:repo-lib", version.ref = "repo" }
+meowdding-lib = { module = "tech.thatgravyboat.meowdding-lib:meowdding-lib-1.21.5", version.ref = "meowdding-lib" }
 
 devauth = { module = "me.djtheredstoner:DevAuth-fabric", version.ref = "devauth" }
 modmenu = { module = "com.terraformersmc:modmenu", version.ref = "modmenu" }
