--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -10,16 +10,16 @@ parchmentmc = "2025.04.19@zip"
 # Dependencies
 fabric = "0.119.5+1.21.5"
 fabrickotlin = "1.13.0+kotlin.2.1.0"
-skyblockapi = "1.0.0-beta.92"
+skyblockapi = "1.0.0-beta.94"
 hypixelapi = "1.0.1+build.1+mc1.21"
-rconfig = "3.5.0"
-rconfigkt = "3.5.0"
+rconfig = "3.5.1"
+rconfigkt = "3.5.1"
 olympus = "1.3.0"
 rlib = "3.5.0"
 placeholders = "2.6.1+1.21.5"
 keval = "1.1.1"
 repolib = "1.2.0"
-meowdding-lib = "1.0.3"
+meowdding-lib = "1.0.6"
 meowdding-ktmodules = "1.0.2"
 
 # Keep kt version in sync with first segment of ksp version
@@ -47,7 +47,7 @@ rconfigkt = { module = "com.teamresourceful.resourcefulconfigkt:resourcefulconfi
 olympus = { module = "earth.terrarium.olympus:olympus-fabric-<mc_version>", version.ref = "olympus" }
 rlib = { module = "com.teamresourceful.resourcefullib:resourcefullib-fabric-<mc_version>", version.ref = "rlib" }
 parchmentmc = { module = "org.parchmentmc.data:parchment-<mc_version>", version.ref = "parchmentmc" }
-meowdding-lib = { module = "tech.thatgravyboat.meowdding-lib:meowdding-lib-<mc_version>", version.ref = "meowdding-lib" }
+meowdding-lib = { module = "me.owdding.meowdding-lib:meowdding-lib-<mc_version>", version.ref = "meowdding-lib" }
 
 # Other libs
 hypixelapi = { module = "maven.modrinth:hypixel-mod-api", version.ref = "hypixelapi" }
