--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -10,7 +10,7 @@ parchmentmc = "2025.04.19@zip"
 # Dependencies
 fabric = "0.119.5+1.21.5"
 fabrickotlin = "1.13.0+kotlin.2.1.0"
-skyblockapi = "1.0.0-beta.107"
+skyblockapi = "1.0.0-beta.110"
 hypixelapi = "1.0.1+build.1+mc1.21"
 rconfig = "3.5.4"
 rconfigkt = "3.5.9"
@@ -19,8 +19,9 @@ rlib = "3.5.0"
 placeholders = "2.6.1+1.21.5"
 keval = "1.1.1"
 repolib = "1.3.1"
-meowdding-lib = "1.0.15"
+meowdding-lib = "1.0.20"
 meowdding-ktmodules = "1.0.3"
+meowdding-ktcodecs = "1.0.17"
 
 # Keep kt version in sync with first segment of ksp version
 kotlin = "2.1.20"
@@ -55,6 +56,7 @@ placeholders = { module = "eu.pb4:placeholder-api", version.ref = "placeholders"
 keval = { module = "com.notkamui.libs:keval", version.ref = "keval" }
 repo = { module = "tech.thatgravyboat.repo-lib:repo-lib", version.ref = "repolib" }
 meowdding-ktmodules = { module = "me.owdding.ktmodules:KtModules", version.ref = "meowdding-ktmodules" }
+meowdding-ktcodecs = { module = "me.owdding.ktcodecs:KtCodecs", version.ref = "meowdding-ktcodecs" }
 
 # Dev libs
 devauth = { module = "me.djtheredstoner:DevAuth-fabric", version.ref = "devauth" }
