--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -14,12 +14,12 @@ skyblockapi = "1.0.0-beta.117"
 hypixelapi = "1.0.1+build.1+mc1.21"
 rconfig = "3.5.4"
 rconfigkt = "3.5.9"
-olympus = "1.3.1"
+olympus = "1.3.4-beta.1"
 rlib = "3.5.0"
 placeholders = "2.6.1+1.21.5"
 keval = "1.1.1"
 repolib = "1.3.1"
-meowdding-lib = "1.0.22"
+meowdding-lib = "1.0.23"
 meowdding-ktmodules = "1.0.3"
 meowdding-ktcodecs = "1.0.17"
 
