--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -14,7 +14,7 @@ skyblockapi = "1.0.0-beta.119"
 hypixelapi = "1.0.1+build.1+mc1.21"
 rconfig = "3.5.4"
 rconfigkt = "3.5.9"
-olympus = "1.3.4-beta.1"
+olympus = "1.3.4"
 rlib = "3.5.0"
 placeholders = "2.6.1+1.21.5"
 keval = "1.1.1"
