--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -20,6 +20,7 @@ placeholders = "2.6.1+1.21.5"
 keval = "1.1.1"
 repolib = "1.5.1"
 meowdding-lib = "1.0.53"
+meowdding-dev-utils = "1.0.4"
 meowdding-ktmodules = "1.0.5"
 meowdding-ktcodecs = "1.0.23"
 
@@ -49,6 +50,7 @@ olympus = { module = "earth.terrarium.olympus:olympus-fabric-<mc_version>", vers
 rlib = { module = "com.teamresourceful.resourcefullib:resourcefullib-fabric-<mc_version>", version.ref = "rlib" }
 parchmentmc = { module = "org.parchmentmc.data:parchment-<mc_version>", version.ref = "parchmentmc" }
 meowdding-lib = { module = "me.owdding.meowdding-lib:meowdding-lib-<mc_version>", version.ref = "meowdding-lib" }
+meowdding-dev-utils = { module = "me.owdding:meowdding-dev-utils", version.ref = "meowdding-dev-utils" }
 
 # Other libs
 hypixelapi = { module = "maven.modrinth:hypixel-mod-api", version.ref = "hypixelapi" }
