--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -10,7 +10,7 @@ parchmentmc = "2025.04.19@zip"
 fabric-loader = "0.16.10"
 fabric-api = "0.119.5+1.21.5"
 fabric-language-kotlin = "1.13.0+kotlin.2.1.0"
-skyblockapi = "1.0.0-beta.140"
+skyblockapi = "1.0.0-beta.140-multiversion"
 hypixelapi = "1.0.1+build.1+mc1.21"
 rconfig = "3.5.11"
 rconfigkt = "3.5.12"
@@ -18,7 +18,7 @@ olympus = "1.3.6"
 rlib = "3.5.0"
 placeholders = "2.6.1+1.21.5"
 keval = "1.1.1"
-repolib = "1.5.1"
+repolib = "2.0.2"
 
 meowdding-lib = "1.0.53"
 meowdding-dev-utils = "1.0.6"
@@ -44,7 +44,7 @@ fabrickotlin = { module = "net.fabricmc:fabric-language-kotlin", version.ref = "
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlin" }
 
 # Libs with mc version in artifact id
-skyblockapi = { module = "tech.thatgravyboat:skyblock-api-<mc_version>", version.ref = "skyblockapi" }
+skyblockapi = { module = "tech.thatgravyboat:skyblock-api", version.ref = "skyblockapi" }
 rconfig = { module = "com.teamresourceful.resourcefulconfig:resourcefulconfig-fabric-<mc_version>", version.ref = "rconfig" }
 rconfigkt = { module = "com.teamresourceful.resourcefulconfigkt:resourcefulconfigkt-fabric-<mc_version>", version.ref = "rconfigkt" }
 olympus = { module = "earth.terrarium.olympus:olympus-fabric-<mc_version>", version.ref = "olympus" }
@@ -69,7 +69,6 @@ modmenu = { module = "com.terraformersmc:modmenu", version.ref = "modmenu" }
 
 fabric = ["loader", "fabric", "fabrickotlin"]
 meowdding = ["meowdding-lib"]
-sbapi = ["skyblockapi", "hypixelapi"]
 rconfig = ["rconfig", "rconfigkt"]
 libs = ["rlib", "olympus", "placeholders"]
 
