--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -7,13 +7,13 @@ fabric-api = "0.128.1"
 kotlin = "2.1.20"
 kotlin-symbol-processor = "2.1.20-1.0.32"
 
-skyblockapi = "1.0.0-beta.140-multiversion+build.22"
+skyblockapi = "2.0.0"
 skyblockapi-repo = "2.0.2"
 hypixelapi = "1.0.1+build.1+mc1.21"
 placeholders = "2.6.1+1.21.5"
 keval = "1.1.1"
 
-meowdding-lib = "1.0.53-multiversion+build.13"
+meowdding-lib = "2.0.0"
 meowdding-repo = "1.0.16"
 meowdding-resources = "1.0.12"
 meowdding-ktmodules = "1.0.5"
