refactor: idk sophie stuff
Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,9 @@
 kotlin.code.style=official
-org.gradle.jvmargs=-Xmx2048m
+org.gradle.jvmargs=-Xmx4G
 ksp.incremental=false
 version=1.5.0
 group=me.owdding.skyocean
+org.gradle.parallel=true
+org.gradle.configuration-cache=true
+org.gradle.configureondemand=true
+org.gradle.caching=true
