--- a/detekt/detekt.yml
+++ b/detekt/detekt.yml
@@ -14,11 +14,15 @@ complexity:
     LongMethod: # default max length of 60, caught way too much
         active: true
         threshold: 100
+    NamedArguments:
+        active: true
+        ignoreArgumentsMatchingNames: true
+        threshold: 6
+    TooManyFunctions:
+        active: false
 
 exceptions:
-    SwallowedException: # there are valid reasons to do this
-        active: false
-    ThrowingExceptionsWithoutMessageOrCause: # again, valid reasons
+    ThrowingExceptionsWithoutMessageOrCause: # there are valid reasons to do this
         active: false
     TooGenericExceptionCaught: # sometimes you just need to catch Exception
         active: false
@@ -31,14 +35,18 @@ formatting:
     MultiLineIfElse:
         active: false
     ArgumentListWrapping: # ktlint - way too aggressive
-        active: false
+        active: true
+        maxLineLength: 160
+    ParameterListWrapping: # pedantic, can be useful in compact code
+        active: true
+        maxLineLength: 160
+    EnumWrapping:
+        active: true
     NoBlankLineBeforeRbrace: # pedantic
         active: false
     NoConsecutiveBlankLines: # pedantic
         active: false
     NoEmptyFirstLineInMethodBlock: # pedantic
-        active: false
-    ParameterListWrapping: # pedantic, can be useful in compact code
         active: false
     SpacingBetweenDeclarationsWithAnnotations: # nah
         active: false
@@ -56,8 +64,14 @@ formatting:
         active: false
 
 naming:
+    NoNameShadowing:
+        active: false
     ConstructorParameterNaming: # pedantic
         active: false
+    FunctionNaming:
+        functionPattern: "[a-z][a-zA-Z0-9]*|[a-z]+$[a-z][a-zA-Z0-9]*"
+    VariableNaming:
+        variablePattern: "[a-z][A-Za-z0-9]*|[a-z]+$[a-z][A-Za-z0-9]*"
 
 performance:
     UnnecessaryPartOfBinaryExpression:
@@ -68,6 +82,8 @@ potential-bugs:
         active: false
     HasPlatformType: # false positives on config get() methods
         active: false
+    Deprecation:
+        active: true
 
 style:
     AlsoCouldBeApply:
@@ -117,3 +133,6 @@ style:
         active: true
     UseOrEmpty: # idk i dont vibe with this
         active: false
+    WildcardImport: # we use wildcard imports in some places
+        active: false
+
