--- a/.editorconfig
+++ b/.editorconfig
@@ -18,6 +18,10 @@ ij_any_line_comment_add_space = true
 # Max line length
 max_line_length = 160
 
+[*.xml]
+max_line_length = 2000
+indent_size = 2
+
 [*.json*]
 indent_size = 2
 
