--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,6 @@ ksp.incremental=false
 version=1.5.0
 group=me.owdding.skyocean
 org.gradle.parallel=true
-org.gradle.configuration-cache=true
+#org.gradle.configuration-cache=true
 org.gradle.configureondemand=true
 org.gradle.caching=true
