--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,7 +33,7 @@ jobs:
             -   name: Build with Gradle
                 uses: gradle/gradle-build-action@v2.11.0
                 with:
-                    arguments: cleanRelease --stacktrace
+                    arguments: 1215JarInJar --stacktrace
             -   name: Upload Artifact
                 uses: actions/upload-artifact@v4.0.0
                 with:
