--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,6 +29,8 @@ jobs:
                     distribution: 'temurin'
             -   name: Grant execute permission for gradlew
                 run: chmod +x gradlew
+            -   name: Create run dir
+                run: mkdir run
             -   name: Build with Gradle
                 uses: gradle/gradle-build-action@v2.11.0
                 with:
