fix: item tracker dropping source if it's the last one (#68)
Co-authored-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/.github/workflows/detekt.yml
+++ b/.github/workflows/detekt.yml
@@ -3,9 +3,10 @@ name: Detekt
 # Copied from SkyHanni, and modified to work with SkyOcean - Daveed
 
 on:
+    push:
+        branches: [ "main" ]
     pull_request_target:
-        branches:
-            - "*"
+        branches: [ "main" ]
     workflow_dispatch:
 
 permissions:
@@ -37,7 +38,7 @@ jobs:
                 uses: ./.github/actions/gradle-retry
                 continue-on-error: true
                 with:
-                    gradle-command: detektMain --stacktrace
+                    gradle-command: setupForWorkflows detektMain --stacktrace
             -   name: Check if SARIF file exists
                 if: always()
                 id: check_sarif
