refactor: fix easy baseline issues
Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/detekt/detekt.yml
+++ b/detekt/detekt.yml
@@ -34,9 +34,8 @@ formatting:
         active: false
     MultiLineIfElse:
         active: false
-    ArgumentListWrapping: # ktlint - way too aggressive
-        active: true
-        maxLineLength: 160
+    ArgumentListWrapping: # some arguments are better on the same line (e.g. x,y,z)
+        active: false
     ParameterListWrapping: # pedantic, can be useful in compact code
         active: true
         maxLineLength: 160
