feat: allow detekt comments on draft prs

--- a/.github/workflows/detekt.yml
+++ b/.github/workflows/detekt.yml
@@ -83,8 +83,7 @@ jobs:
         needs: detekt
         if: ${{
             needs.detekt.outputs.sarif_exists == 'true' &&
-            needs.detekt.outputs.detekt_failed == 'true' &&
-            github.event.pull_request.draft == false
+            needs.detekt.outputs.detekt_failed == 'true'
             }}
         permissions:
             pull-requests: write
