--- a/detekt/detekt.yml
+++ b/detekt/detekt.yml
@@ -36,10 +36,10 @@ formatting:
     ArgumentListWrapping: # some arguments are better on the same line (e.g. x,y,z)
         active: false
     ParameterListWrapping: # pedantic, can be useful in compact code
-        active: true
+        active: false
         maxLineLength: 160
     EnumWrapping:
-        active: true
+        active: false
     NoBlankLineBeforeRbrace: # pedantic
         active: false
     NoConsecutiveBlankLines: # pedantic
@@ -53,10 +53,13 @@ formatting:
     FunctionReturnTypeSpacing:
         maxLineLength: 160
     ParameterWrapping:
+        active: false
         maxLineLength: 160
     PropertyWrapping:
+        active: false
         maxLineLength: 160
     Wrapping:
+        active: false
         maxLineLength: 160
     NoWildcardImports: # we use wildcard imports in some places
         active: false
@@ -134,5 +137,7 @@ style:
     UseOrEmpty: # idk i dont vibe with this
         active: false
     WildcardImport: # we use wildcard imports in some places
+        active: false
+    ThrowsCount:
         active: false
 
