--- a/detekt/detekt.yml
+++ b/detekt/detekt.yml
@@ -72,6 +72,8 @@ naming:
         variablePattern: "[a-z][A-Za-z0-9]*|[a-z]+$[a-z][A-Za-z0-9]*"
 
 performance:
+    SpreadOperator:
+        active: false
     UnnecessaryPartOfBinaryExpression:
         active: true
 
