feat: add first museum helper things (#88)
* feat: add first museum helper things

* feat: use kt context

* feat: finish items, and add first amour stuff

* hopefully fix build issues

* feat: craft helper and armour tooltip

* feat: add config

* Update Utils.kt

Co-authored-by: ThatGravyBoat <gravy@thatgravyboat.tech>

* changes

* meow

* baselineπ

* requested changes

* grrr

* disable detekt

* comments

* fixπ

* fix armor of the pack and mangrove equipment

Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

* changes

---------

Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>
Co-authored-by: ThatGravyBoat <gravy@thatgravyboat.tech>
Co-authored-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/detekt/detekt.yml
+++ b/detekt/detekt.yml
@@ -53,10 +53,13 @@ formatting:
     FunctionReturnTypeSpacing:
         maxLineLength: 160
     ParameterWrapping:
+        active: true
         maxLineLength: 160
     PropertyWrapping:
+        active: true
         maxLineLength: 160
     Wrapping:
+        active: true
         maxLineLength: 160
     NoWildcardImports: # we use wildcard imports in some places
         active: false
@@ -137,4 +140,12 @@ style:
         active: false
     WildcardImport: # we use wildcard imports in some places
         active: false
-
+    ThrowsCount:
+        active: false
+    ForbiddenImport:
+        active: true
+        imports:
+            -   value: kotlinx.datetime.*
+                reason: "Kotlinx datetime is still in beta and shouldn't be used"
+    UnusedImports:
+        active: true
