refactor: replace skyoceanid with skyblockid
Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/src/repo/unobtainable_ids.jsonc
+++ b/src/repo/unobtainable_ids.jsonc
@@ -1,5 +1,5 @@
 /*
-* A list of SkyOceanItemIds that are unobtainable and therefore should be removed from the name cache,
+* A list of SkyBlockIds that are unobtainable and therefore should be removed from the name cache,
 * they should ALWAYS have the full type e.g. <category>:<id>[:<suffix>]
 */
 [
