--- a/.github/workflows/detekt.yml
+++ b/.github/workflows/detekt.yml
@@ -136,5 +136,5 @@ jobs:
                             issue_number: context.issue.number,
                             owner: context.repo.owner,
                             repo: context.repo.repo,
-                            body: commentBody
+                            body: commentBody.substring(0, 65536)
                         })
