--- a/.github/workflows/detekt.yml
+++ b/.github/workflows/detekt.yml
@@ -32,13 +32,18 @@ jobs:
                 with:
                     ref: ${{ github.event.pull_request.head.ref }}
                     repository: ${{ github.event.pull_request.head.repo.full_name }}
-            -   uses: ./.github/actions/setup-normal-workspace
-            -   name: Run detekt main (w/ typing analysis) w/gradle retry
-                id: run_detekt
-                uses: ./.github/actions/gradle-retry
-                continue-on-error: true
+            -   name: Setup JDK 21
+                uses: actions/setup-java@v5
                 with:
-                    gradle-command: setupForWorkflows detektMain --stacktrace
+                    distribution: temurin
+                    java-version: '21'
+            -   name: Setup gradle
+                uses: gradle/actions/setup-gradle@v5
+                with:
+                    add-job-summary-as-pr-comment: 'on-failure'
+            -   run: chmod +x gradlew
+            -   name: Run detekt main
+                run: ./gradlew detekt --stacktrace
             -   name: Check if SARIF file exists
                 if: always()
                 id: check_sarif
