--- a/detekt/detekt.yml
+++ b/detekt/detekt.yml
@@ -100,6 +100,8 @@ ktlint:
         active: false
     BlockCommentInitialStarAlignment:
         active: false
+    PackageName:
+        active: false
 
 naming:
     NoNameShadowing:
