--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,7 +22,7 @@ jobs:
               uses: gradle/actions/setup-gradle@v5
             - run: chmod +x gradlew
             - name: Build
-              run: ./gradlew build
+              run: ./gradlew build -PskipDetekt
             - name: Upload Artifact
               uses: actions/upload-artifact@v4.0.0
               with:
