--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,16 +7,18 @@ fabric-api = "0.133.4"
 kotlin = "2.2.0"
 kotlin-symbol-processor = "2.2.0-2.0.2"
 gson = "2.12.1"
-skyblockapi = "3.0.24"
+skyblockapi = "4.0.0-beta.5"
 skyblockapi-repo = "3.0.2"
 placeholders = "2.6.1+1.21.5"
 keval = "1.1.1"
+
+hypixel-modapi-fabric = "1.0.1+build.1+mc1.21"
 
 rconfigkt = "3.5.15"
 
 detekt = "2.0.0-alpha.0"
 
-meowdding-lib = "3.1.1"
+meowdding-lib = "4.0.0-beta.2"
 meowdding-ktmodules = "1.0.6"
 meowdding-ktcodecs = "1.1.5"
 meowdding-gradle = "1.1.0"
@@ -35,6 +37,8 @@ skyblockapi = { module = "tech.thatgravyboat:skyblock-api", version.ref = "skybl
 skyblockapi-repo = { module = "tech.thatgravyboat.repo-lib:repo-lib", version.ref = "skyblockapi-repo" }
 placeholders = { module = "eu.pb4:placeholder-api", version.ref = "placeholders" }
 keval = { module = "com.notkamui.libs:keval", version.ref = "keval" }
+
+hypixel-modapi-fabric = { module = "maven.modrinth:hypixel-mod-api", version.ref = "hypixel-modapi-fabric" }
 
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 
