--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,3 +36,7 @@ jobs:
               with:
                   name: 1.21.10
                   path: build/libs/*-1.21.10.jar
+            - uses: actions/upload-artifact@v4.0.0
+              with:
+                  name: 1.21.11
+                  path: build/libs/*-1.21.11.jar
