--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,7 @@ fabric-api = "0.133.4"
 kotlin = "2.2.0"
 kotlin-symbol-processor = "2.2.0-2.0.2"
 gson = "2.12.1"
-skyblockapi = "4.0.0-beta.5"
+skyblockapi = "4.0.0"
 skyblockapi-repo = "3.0.2"
 placeholders = "2.6.1+1.21.5"
 keval = "1.1.1"
@@ -18,7 +18,7 @@ rconfigkt = "3.5.15"
 
 detekt = "2.0.0-alpha.0"
 
-meowdding-lib = "4.0.0-beta.2"
+meowdding-lib = "4.0.1"
 meowdding-ktmodules = "1.0.6"
 meowdding-ktcodecs = "1.1.5"
 meowdding-gradle = "1.1.0"
